--- a/src/main/resources/templates/contacto/formulario.html
+++ b/src/main/resources/templates/contacto/formulario.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Nuevo</button>
         </form>
     </div>
 </div>
